[tool.poetry]
name = "investigate-solar-fires"
version = "0.1.0"
description = ""
authors = ["Mahnoor Qureshi <77474299+mahnoorq@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
